# fast-repository

./: .gitignore  CHANGELOG.md  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: customizing-queries.md  filtering.md  getting-started.md  soft-delete.md  transactions.md
docs/en/: customizing-queries.md  fastapi.md  filtering.md  getting-started.md  soft-delete.md  transactions.md
docs/ko/: customizing-queries.md  fastapi.md  filtering.md  getting-started.md  soft-delete.md  transactions.md
examples/: 01_basic_crud.py  02_filtering.py  03_transactions.py  04_soft_delete.py  05_custom_queries.py  README.md  app.py  enums.py  models.py
examples/fastapi_app/: __init__.py  database.py  dependencies.py  dtos.py  main.py  routers.py
src/fast_repository/: __init__.py  _base.py  abstract.py  crud.py  filters.py  interface.py  sync.py
src/fast_repository/enums/: __init__.py  filter_operator.py
src/fast_repository/errors/: __init__.py  filters.py
src/fast_repository/impl/: __init__.py  base.py  crud.py  filters.py  sync.py
src/fast_repository/interface/: __init__.py  crud.py  sync.py
src/fast_repository/types/: __init__.py  locking.py
tests/: __init__.py  conftest.py  models.py  test_crud.py  test_soft_delete.py  test_sync_crud.py
